--- a/app/css/user-gallery.scss
+++ b/app/css/user-gallery.scss
@@ -7,9 +7,14 @@
     grid-template-rows: auto;
     grid-gap: 16px;
 
+    @media (min-width: 701px) and (max-width: 1120px) {
+      grid-template-columns: 1fr 1fr;
+    }
     @media screen and (min-width: 768.1px) {
       grid-template-columns: 1fr 1fr 1fr;
     }
+
+    
   }
 
   > .heading + .items {
